Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80600

singleshot timer executes before all window events have finished on ARM

XMLWordPrintable

    • Linux/Wayland
    • a77fdc9847bcf730862f262aac0a2c4e921f4411 (qt/qtbase/5.15)

      On ARM singleshot timers seem to executing before all events in the window system event queue have been processed.

      Steps to reproduce:

      • Run the attached sample on an ARM device
      • Press the button
      • Expected: After pressing the button the dialog should appear first with a green background color, the ui should then be unresponsive for 3 seconds then dialog background color should changed to red and the ui become responsive again.
      • Actual: After pressing the button, the ui becomes unresponsive for 3 seconds then the dialog appears with the red background.

      On Qt 5.12.2 running the same sample on ARM and Windows the expected result occurs.

      We are using qt5 wayland and weston.

        1. QTBUG-80600SampleApp.zip
          1 kB
          Elsdon Greenough
        For Gerrit Dashboard: QTBUG-80600
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            elsdon Elsdon Greenough
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes